Non-unified build fixes late January 2020 edition https://bugs.webkit.org/show_bug.cgi?id=206896

Unreviewed build fix.


* Modules/cache/DOMCacheEngine.cpp:
* animation/DocumentTimeline.cpp:
* layout/inlineformatting/InlineItem.h:


Canonical link: https://commits.webkit.org/219909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255268 268f45cc-cd09-0410-ab3c-d52691b4dbfc